tests/snapshots/bridge_snapshot_exhaustive__openai__openai_chunk_role_first.snap
---
source: tests/bridge_snapshot_exhaustive.rs
expression: "&chunk"
---
{
  "id": "chatcmpl-chunk00",
  "object": "chat.completion.chunk",
  "created": 1700000000,
  "model": "gpt-4o",
  "choices": [
    {
      "index": 0,
      "delta": {
        "role": "assistant"
      }
    }
  ]
}
