tests/snapshots/bridge_snapshot_exhaustive__openai__openai_error_response.snap
---
source: tests/bridge_snapshot_exhaustive.rs
expression: "&err"
---
{
  "error": {
    "message": "Invalid model specified",
    "type": "invalid_request_error",
    "param": "model",
    "code": "model_not_found"
  }
}
