tests/snapshots/bridge_snapshot_exhaustive__openai__openai_message_assistant.snap
---
source: tests/bridge_snapshot_exhaustive.rs
expression: "&msg"
---
{
  "role": "assistant",
  "content": "Here's a sorting function..."
}
