tests/snapshots/bridge_snapshot_exhaustive__openai__openai_message_system.snap
---
source: tests/bridge_snapshot_exhaustive.rs
expression: "&msg"
---
{
  "role": "system",
  "content": "You are a coding assistant."
}
