tests/snapshots/bridge_snapshot_exhaustive__openai__openai_message_tool.snap
---
source: tests/bridge_snapshot_exhaustive.rs
expression: "&msg"
---
{
  "role": "tool",
  "content": "Command executed successfully",
  "tool_call_id": "call_abc"
}
