tests/snapshots/bridge_snapshot_exhaustive__openai__openai_message_user.snap
---
source: tests/bridge_snapshot_exhaustive.rs
expression: "&msg"
---
{
  "role": "user",
  "content": "Write a function to sort an array"
}
