tests/snapshots/bridge_snapshot_exhaustive__openai__openai_request_minimal.snap
---
source: tests/bridge_snapshot_exhaustive.rs
expression: "&req"
---
{
  "model": "gpt-4o",
  "messages": [
    {
      "role": "user",
      "content": "Hello"
    }
  ]
}
